# SealPIR

./: .gitignore  CMakeLists.txt
python/: client_xh.py  pir_xh.py  server_xh.py
src/: CMakeLists.txt  client_xh.cpp  main.cpp  pir.cpp  pir.hpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  server_xh.cpp  xh.cpp  xh.hpp
test/: check_sock.sh  get_ground_truth.sh
